--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
     font-family: 'Open Sans', sans-serif; */
 }
 
-
-body {
+main.container {
     min-height: 100vh;
     min-width: 100vw;
     display: flex;
@@ -19,12 +18,38 @@ body {
     justify-content: center;
 }
 
-main.container {
+section.card {
     background: white;
-    max-width: 263px;
-    min-height: 386px;
-    padding-top: 310px;
-    padding-left: 218px;
+    width: 263px;
+    height: 386px;
+    
     box-shadow: 0px 4px 42px rgba(0, 0, 0, 0.25);
     border-radius: 16px 50px 16px 16px;
+
+    position: relative;
+}
+
+.card-image {
+    position: absolute;
+
+    top: -200px;
+    right: -120px;
+}
+
+.card-content {   
+    padding: 120px 20px 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1.title {
+    color: #29455F;
+    font-size: 26px;
+    line-height: 32px;
+}
+
+h2.subtitle {
+    font-family: 'Montserrat', sans-serif;
+    color: #8F8F8F;
+    font-size: 14px;
+    line-height: 17px;
 }
