--- a/style.css
+++ b/style.css
@@ -163,3 +163,9 @@ p.size-numbers > span.number:nth-child(n+2) {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
     border-radius: 16px;
 }
+
+.buy-store {
+
+}
+
+/* icon/maps/local_grocery_store_24px */
