--- a/style.css
+++ b/style.css
@@ -164,14 +164,26 @@ p.size-numbers > span.number:nth-child(n+2) {
     border-radius: 16px;
 }
 
-.buy-navigation {
+.buy-navigation-1 {
     position: relative;
     left: 18px;
     top: 15px;
 }
 
+.buy-navigation-2 {
+    position: relative;
+    left: 2px;
+    top: 20px;
+}
+
+.buy-navigation-3 {
+    position: relative;
+    left: -15px;
+    top: 25px;
+}
+
 .buy-store {
     position: relative;
-    left: -5px;
-    top: 45px;
+    left: 12px;
+    top: 25px;
 }
